--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -21,6 +21,13 @@
   text-align: center;
   font-weight: 400;
 }
+.title2 {
+  grid-column: 2;
+  text-align: center;
+  font-weight: 10;
+  border-bottom: 2px;
+  border-top: 2px;
+}
 
 .githubIconPath {
   fill: var(--color-fg);
