Added dehya and ranking system

--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -15,6 +15,12 @@
   align-items: center;
 }
 
+.difficultyBtnDiv {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
 .title {
   grid-column: 2;
   text-align: center;
